// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Component renders FormError component correctly with custom message 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard sc-hLljAB kDJCrq css-1hdyuqk-MuiPaper-root-MuiAlert-root"
  role="alert"
>
  <div
    className="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
      data-testid="ErrorOutlineIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="MuiAlert-message css-1pxa9xg-MuiAlert-message"
  >
    Custom Error Message
  </div>
</div>
`;

exports[`Form Component renders FormRow component correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-container sc-gsMHZj kyEOGR css-11lq3yg-MuiGrid-root"
>
  <div>
    Child Element
  </div>
</div>
`;

exports[`Form Component renders FormRowItem component correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-item sc-dkHyXG cUUUEY css-13i4rnv-MuiGrid-root"
>
  <div>
    Child Element
  </div>
</div>
`;

exports[`Form Component renders children correctly 1`] = `
<form
  className="sc-bcHOTY jCvqer"
  noValidate={true}
>
  <div>
    Child Element
  </div>
</form>
`;

exports[`FormRow Component renders children correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-container sc-gsMHZj kyEOGR css-11lq3yg-MuiGrid-root"
>
  <div>
    Test Child
  </div>
</div>
`;

exports[`FormRowItem Component renders children correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-item sc-dkHyXG cUUUEY css-13i4rnv-MuiGrid-root"
>
  <div>
    Test Child
  </div>
</div>
`;
